# apps/admin/src/api/routes.ts
@@ -1,10 +1,11 @@
 import { http } from "@/utils/http";
 
-type Result = {
-  success: boolean;
+type MenuResponse = {
+  code: number;
+  message: string;
   data: Array<any>;
 };
 
-export const getAsyncRoutes = () => {
-  return http.request<Result>("get", "/get-async-routes");
+export const getAsyncRoutes = (project: string = "admin") => {
+  return http.request<MenuResponse>("get", "/api/menus", { params: { project, tree: "true" } });
 };
